--- a/project/res/layout/activity_login.xml
+++ b/project/res/layout/activity_login.xml
@@ -25,6 +25,55 @@
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
 		    android:text="@string/login"/>
+		
+		<Button 
+		    android:id="@+id/login_qq"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:text="使用qq登录"/>
+		
+		<LinearLayout 
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:orientation="horizontal">
+		    <ImageView 
+		        android:id="@+id/qq_avatar"
+		        android:layout_width="60dp"
+		        android:layout_height="60dp"
+		        android:contentDescription="qq avatar" />
+		    <LinearLayout 
+		        android:layout_width="0dp"
+		        android:layout_height="match_parent"
+		        android:layout_weight="1"
+		        android:orientation="vertical">
+		        <TextView 
+			        android:id="@+id/qq_name"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:text="name"/>
+		        <TextView 
+		            android:id="@+id/qq_sex"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:text="sex"/>
+		        <TextView 
+		            android:id="@+id/qq_area"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:text="area"/>
+		    </LinearLayout>
+		</LinearLayout>
+		
+		<Button 
+		    android:id="@+id/get_qq_user_info"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:text="获取qq用户信息" />
+		<Button 
+		    android:id="@+id/login_wechat"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:text="使用微信登录"/>
 	</LinearLayout>
 	
 	<RelativeLayout
