--- a/project/res/layout/activity_wechat.xml
+++ b/project/res/layout/activity_wechat.xml
@@ -3,10 +3,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <Button 
-        android:id="@+id/wechat"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="登录"/>
+    <LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="horizontal">
+	    <ImageView 
+	        android:id="@+id/wechat_avatar"
+	        android:layout_width="60dp"
+	        android:layout_height="60dp"
+	        android:contentDescription="wechat avatar" />
+	    <LinearLayout 
+	        android:layout_width="0dp"
+	        android:layout_height="match_parent"
+	        android:layout_weight="1"
+	        android:orientation="vertical">
+	        <TextView 
+		        android:id="@+id/wechat_name"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:text="name"/>
+	        <TextView 
+	            android:id="@+id/wechat_sex"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="sex"/>
+	        <TextView 
+	            android:id="@+id/wechat_area"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="area"/>
+	    </LinearLayout>
+	</LinearLayout>
     
 </LinearLayout>
